--- a/maps/sublevels/sublevels.html
+++ b/maps/sublevels/sublevels.html
@@ -16,7 +16,7 @@
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
             <h1>Sublevels:</h1>
-            <i>requires our modkit </i>
+            <i>requires our SDK </i>
             <p>We seperate Visuals and collisions from gamemode related things, like spawns and the payload<br>
             This is so we can reset the game state without having to reload everything(much slower)<br>
             Having sublevels is necessary for multi round maps</p>
