--- a/maps/mapporting/mapporting.html
+++ b/maps/mapporting/mapporting.html
@@ -74,7 +74,7 @@
             <p>unselect your chunks and now, manually merge your displacements into bigger chunks</p>
             <p>Select the skybox and go into wireframe rendering. now, while holding shift, you need to select the skybox camera object and then go to object->transform VMF 3D sky</p>
             <img src="images/transformsky.png">
-            <p>Run the fixmodelnames script (and if you have mano's custom source io, also run his clearmaterials.py)</p>
+            <!--<p>Run the fixmodelnames script (and if you have mano's custom source io, also run his clearmaterials.py)</p>-->
             <p>once that is done select all objects in <strong>ONE</strong> collection and export them as udatasmith with <strong>selected objects only</strong> enabled, repeat this for all collections</p>
             <img src="images/ExportDatasmith.png">
             <p>Congrats, you are done with blender(<i>in this guide</i>)! only 1% survive this far!(i think)</p>
