--- a/maps/MapLighting/lighting.html
+++ b/maps/MapLighting/lighting.html
@@ -16,6 +16,7 @@
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
             <h1>Getting the Lighting right:</h1>
+            <p>i recommend adding indirect lighting to most light objects including point and spot lights and the sun. this can make it look more like tf2 and to prevent certain rooms being darker than intended, remember to always cross reference with tf2 to get lighting right</p>
             <h2>SkyLight - Static</h2>
             <code>Cubemap resolution = 128</code> <br>
             <code>Sky Distance Threshold = 1</code><br>
