--- a/preset.html
+++ b/preset.html
@@ -10,8 +10,8 @@
     <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-    <a href="index.html">
-            <img src="devtfvr_small.png" class="home" alt="return to home">
+    <a href="../../index.html" class="home">
+            <img src="../../devtfvr_small.png" alt="return to home"><strong style="margin-left: 15%;">Return</strong>
         </a>
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
