--- a/installingmodkit/modkit.html
+++ b/installingmodkit/modkit.html
@@ -39,9 +39,10 @@
                 if you get a 404 error, check if you did step 2 correctly
                 
             </div>
-            <div class="note">
+            <div class="warning">
                 <strong>WARNING</strong><br>
                 Download the modkit version 0.94.1.1 ! NOT the latest, that version is bugged to hell and back
+            </div>
             <p>download it <a href="https://github.com/kcmonkey1992/ContractorsVRModKit/releases">here</a></p>
             <p>You will see alot of files, you can ignore the source code zip</p>
             <p>it is important to note that the files start with .zip and end with .z13(or z14 for the old modkit version)</p>
